[package]
authors = ["anderejd <rajder@gmail.com>"]
description = "Pretty printing/formatting of json files."
edition = "2018"
license = "Apache-2.0/MIT"
name = "jsonfmt"
readme = "README.md"
repository = "https://github.com/anderejd/jsonfmt"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.41"
