[package]
authors = ["anderejd <rajder@gmail.com>"]
description = "Pretty printing/formatting of json files."
edition = "2018"
license = "Apache-2.0/MIT"
name = "jsonfmt"
readme = "README.md"
repository = "https://github.com/anderejd/jsonfmt"
version = "0.3.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
pico-args = "0.3.0"

[dependencies.serde_json]
version = "1.0.41"
features = ["preserve_order", "arbitrary_precision"]
