[package]
authors = ["anderejd <rajder@gmail.com>"]
categories = ["command-line-utilities"]
description = "A command line program for pretty-printing or minimizing json files."
edition = "2018"
keywords = ["json", "format", "minimize", "pretty-print", "beautify"]
license = "Apache-2.0/MIT"
name = "jsonfmt"
readme = "README.md"
repository = "https://github.com/anderejd/jsonfmt"
version = "0.4.1"

# Exclude a large json file used for manual benchmarking.
exclude = [
	"/sf-city-lots-json/",
	"/.github/",
	"/.gitmodules"
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
pico-args = "0.3.0"

[dependencies.serde_json]
version = "1.0.41"
features = ["preserve_order", "arbitrary_precision"]

[profile.release]
lto = true
panic = "abort"
